CHANGELOG.txt
=============

0.5.3
- window size and position memorize through settings
- changes all NULL pointer to 00 (zero in octal)

0.5.2
- filter widget (just visual, not functional)

0.5.1
- first version of internationalization

0.5
- first version of multithreading collection update

0.4
- directories can be added or removed
- directories are fetched for media files which are displayed in a list

0.3
- first display of added directories

0.1
- first version, only collection adding and removing is implemented.