@@ -1,219 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS>
-<TS version="2.0" language="fr_FR">
-<context>
-    <name></name>
-    <message>
-        <location filename="../../src/mediafilter.cpp" line="34"/>
-        <source>Title</source>
-        <translation>Titre</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediafilter.cpp" line="34"/>
-        <source>Seen</source>
-        <translation>Vu</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediafilter.cpp" line="34"/>
-        <source>Tag</source>
-        <translation>Tag</translation>
-    </message>
-</context>
-<context>
-    <name>Collection</name>
-    <message>
-        <location filename="../../src/collection.cpp" line="131"/>
-        <source>Searching in %1...</source>
-        <translation>Recherche: %1...</translation>
-    </message>
-</context>
-<context>
-    <name>CollectionDialog</name>
-    <message>
-        <location filename="../../src/collectiondialog.cpp" line="66"/>
-        <source>Choose a directory</source>
-        <translation>Choisissez un répertoire</translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="14"/>
-        <source>Collection of directories</source>
-        <translation>Collection de répertoires</translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="29"/>
-        <source>&amp;Add</source>
-        <translation>&amp;Ajouter</translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="32"/>
-        <source>Ctrl+A</source>
-        <translation>Ctrl+A</translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="45"/>
-        <source>&amp;Remove</source>
-        <translation>Enleve&amp;r</translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="48"/>
-        <source>Ctrl+R</source>
-        <translation>Ctrl+R</translation>
-    </message>
-</context>
-<context>
-    <name>InfoView</name>
-    <message>
-        <location filename="../../src/infoview.cpp" line="73"/>
-        <source>Welcome!</source>
-        <translation>Bienvenue !!</translation>
-    </message>
-</context>
-<context>
-    <name>MediaCollection</name>
-    <message>
-        <location filename="../../src/mediacollection.cpp" line="118"/>
-        <source>Constructing the media collection...</source>
-        <translation>Construction de la collection de média en cours...</translation>
-    </message>
-</context>
-<context>
-    <name>MediaSpy</name>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="54"/>
-        <source>Error</source>
-        <translation>Erreur</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="123"/>
-        <source>Cannot create local directory!</source>
-        <translation>Création du répertoire local impossible !</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="130"/>
-        <source>Cannot create local style directory!</source>
-        <translation>Création du répertoire de style local impossible !</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="139"/>
-        <source>This program needs the SQLITE driver.</source>
-        <translation>Ce programme nécessite le driver SQLITE.</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="195"/>
-        <source>Title</source>
-        <translation>Titre</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="257"/>
-        <source>Title: %1</source>
-        <translation>Titre : %1</translation>
-    </message>
-    <message numerus="yes">
-        <location filename="../../src/mediaspy.cpp" line="286"/>
-        <source>%n movie(s) in the collection</source>
-        <translation>
-            <numerusform>%n film dans la collection</numerusform>
-            <numerusform>%n films dans la collection</numerusform>
-        </translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="296"/>
-        <source>About </source>
-        <translation>À propos</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="298"/>
-        <source>&lt;p&gt;MediaSpy is a movie collection cataloging software. Still in heavy development!</source>
-        <translation>&lt;p&gt;MediaSpy est un logiciel de gestion de catalogue de film, en perpétuel développement !</translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="166"/>
-        <location filename="../../ui/mediaspy.ui" line="36"/>
-        <source>Filter</source>
-        <translation>Filtre</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="14"/>
-        <source>MediaSpy</source>
-        <translation>MediaSpy</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="53"/>
-        <location filename="../../ui/mediaspy.ui" line="109"/>
-        <source>...</source>
-        <translation>...</translation>
-    </message>
-    <message>
-        <source>Movie Information</source>
-        <translation type="obsolete">Informations sur le film</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="90"/>
-        <source>Info</source>
-        <translation>Info</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="100"/>
-        <source>about:blank</source>
-        <translation>about:blank</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="121"/>
-        <source>Title:</source>
-        <translation>Titre :</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="141"/>
-        <source>File</source>
-        <translation>Fichier</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="147"/>
-        <source>Help</source>
-        <translation>Aide</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="154"/>
-        <source>Options</source>
-        <translation>Options</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="173"/>
-        <source>About MediaSpy</source>
-        <translation>À propos de MediaSpy</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="178"/>
-        <source>About Qt</source>
-        <translation>À propos de Qt</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="183"/>
-        <source>Quit</source>
-        <translation>Quitter</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="186"/>
-        <source>Ctrl+Q</source>
-        <translation>Ctrl+Q</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="191"/>
-        <source>Select directories</source>
-        <translation>Choisissez des répertoires</translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="194"/>
-        <source>Ctrl+D</source>
-        <translation>Ctrl+D</translation>
-    </message>
-</context>
-<context>
-    <name>UpdateThread</name>
-    <message>
-        <location filename="../../src/updatethread.cpp" line="37"/>
-        <source>Updating...</source>
-        <translation>Mise à jour...</translation>
-    </message>
-</context>
-</TS>
