@@ -1,214 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE TS>
-<TS version="2.0">
-<context>
-    <name></name>
-    <message>
-        <location filename="../../src/mediafilter.cpp" line="34"/>
-        <source>Title</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediafilter.cpp" line="34"/>
-        <source>Seen</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediafilter.cpp" line="34"/>
-        <source>Tag</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-<context>
-    <name>Collection</name>
-    <message>
-        <location filename="../../src/collection.cpp" line="131"/>
-        <source>Searching in %1...</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-<context>
-    <name>CollectionDialog</name>
-    <message>
-        <location filename="../../src/collectiondialog.cpp" line="66"/>
-        <source>Choose a directory</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="14"/>
-        <source>Collection of directories</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="29"/>
-        <source>&amp;Add</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="32"/>
-        <source>Ctrl+A</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="45"/>
-        <source>&amp;Remove</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/collectiondialog.ui" line="48"/>
-        <source>Ctrl+R</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-<context>
-    <name>InfoView</name>
-    <message>
-        <location filename="../../src/infoview.cpp" line="73"/>
-        <source>Welcome!</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-<context>
-    <name>MediaCollection</name>
-    <message>
-        <location filename="../../src/mediacollection.cpp" line="118"/>
-        <source>Constructing the media collection...</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-<context>
-    <name>MediaSpy</name>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="54"/>
-        <source>Error</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="123"/>
-        <source>Cannot create local directory!</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="130"/>
-        <source>Cannot create local style directory!</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="139"/>
-        <source>This program needs the SQLITE driver.</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="166"/>
-        <location filename="../../ui/mediaspy.ui" line="36"/>
-        <source>Filter</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="195"/>
-        <source>Title</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="257"/>
-        <source>Title: %1</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message numerus="yes">
-        <location filename="../../src/mediaspy.cpp" line="286"/>
-        <source>%n movie(s) in the collection</source>
-        <translation type="unfinished">
-            <numerusform></numerusform>
-        </translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="296"/>
-        <source>About </source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../src/mediaspy.cpp" line="298"/>
-        <source>&lt;p&gt;MediaSpy is a movie collection cataloging software. Still in heavy development!</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="14"/>
-        <source>MediaSpy</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="53"/>
-        <location filename="../../ui/mediaspy.ui" line="109"/>
-        <source>...</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="90"/>
-        <source>Info</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="100"/>
-        <source>about:blank</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="121"/>
-        <source>Title:</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="141"/>
-        <source>File</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="147"/>
-        <source>Help</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="154"/>
-        <source>Options</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="173"/>
-        <source>About MediaSpy</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="178"/>
-        <source>About Qt</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="183"/>
-        <source>Quit</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="186"/>
-        <source>Ctrl+Q</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="191"/>
-        <source>Select directories</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
-        <location filename="../../ui/mediaspy.ui" line="194"/>
-        <source>Ctrl+D</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-<context>
-    <name>UpdateThread</name>
-    <message>
-        <location filename="../../src/updatethread.cpp" line="37"/>
-        <source>Updating...</source>
-        <translation type="unfinished"></translation>
-    </message>
-</context>
-</TS>
