@@ -4,6 +4,8 @@ CHANGELOG.txt
 0.5.3
 - window size and position memorize through settings
 - changes all NULL pointer to 00 (zero in octal)
+- new InfoView class
+- resources folder for all MediaSpy.qrc files
 
 0.5.2
 - filter widget (just visual, not functional)
